--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>React Vite Project</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="main.jsx"></script>
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
+
 
 
